# BugsplatMac

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  upload-archive.sh
BugsplatMac/: BugsplatStartupManager.m
BugsplatMac.xcodeproj/: project.pbxproj
BugsplatMac.xcodeproj/xcshareddata/xcschemes/: BugsplatTesterExtended.xcscheme
BugsplatTesterExtended/: Info.plist
